adding autotools example

--- a/building_autoconf_projects/configure.ac
+++ b/building_autoconf_projects/configure.ac
@@ -2,12 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
-
+AC_INIT(libgeodecomp_external_autotools_demo, 1.0, gentryx@gmx.de)
 AM_INIT_AUTOMAKE([1.9 foreign])
 
 AC_CONFIG_SRCDIR([main.cpp])
-# AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CXX
