--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,21 @@
 # Build files
 building_cmake_projects/build
 building_makefile_projects/main
+building_autoconf_projects/.deps/
+building_autoconf_projects/AUTHORS
+building_autoconf_projects/COPYING
+building_autoconf_projects/ChangeLog
+building_autoconf_projects/INSTALL
+building_autoconf_projects/Makefile
+building_autoconf_projects/Makefile.in
+building_autoconf_projects/NEWS
+building_autoconf_projects/aclocal.m4
+building_autoconf_projects/autom4te.cache/
+building_autoconf_projects/compile
+building_autoconf_projects/config.log
+building_autoconf_projects/config.status
+building_autoconf_projects/configure
+building_autoconf_projects/depcomp
+building_autoconf_projects/install-sh
+building_autoconf_projects/main
+building_autoconf_projects/missing
